# postgres-course

./: README.md  pyproject.toml
postgres_course/: DBmanager.py  main.py  utils.py
